# kicad-ipc-cli

./: CODEX_TASK.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
scripts/: package-release.sh
src/: cli.rs  client.rs  groups.rs  main.rs  model.rs  output.rs  units.rs
src/commands/: api.rs  groups.rs  inspect.rs  mod.rs  mutate.rs
