[package]
name = "kicad-ipc-cli"
version = "0.1.4"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "Agent-oriented KiCad PCB Editor IPC command line interface"
repository = "https://github.com/Milind220/kicad-ipc-cli"

[dependencies]
anyhow = "=1.0.79"
clap = { version = "=4.4.18", features = ["derive"] }
kicad-ipc-rs = { version = "=0.5.1", features = ["blocking"] }
prost-types = "=0.14.3"
serde = { version = "=1.0.195", features = ["derive"] }
serde_json = "=1.0.111"
